feat: update order status and apply v

--- a/src/Frontend/MyShop-Frontend/App.xaml
+++ b/src/Frontend/MyShop-Frontend/App.xaml
@@ -20,6 +20,8 @@
             <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
             <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
             <converters:PriceConverter x:Key="PriceConverter"/>
+            <converters:StringNullOrEmptyToVisibilityConverter x:Key="StringNullToVisibility"/>
+            <converters:StringNotNullOrEmptyToVisibilityConverter x:Key="StringNotNullToVisibility"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
