--- a/src/Frontend/MyShop-Frontend/App.xaml
+++ b/src/Frontend/MyShop-Frontend/App.xaml
@@ -11,8 +11,10 @@
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="ms-appx:///Views/Themes/Generic.xaml" />
+                <ResourceDictionary Source="ms-appx:///Views/Themes/AppTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+
             <!-- Converters -->
             <x:Double x:Key="ContentDialogMaxWidth">3000</x:Double>
             <x:Double x:Key="ContentDialogMaxHeight">1000</x:Double>
