--- a/src/Frontend/MyShop-Frontend/Views/Pages/ReportPage.xaml
+++ b/src/Frontend/MyShop-Frontend/Views/Pages/ReportPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
+    xmlns:controls="using:MyShop_Frontend.Views.Controls"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -73,17 +74,17 @@
                             </ComboBox>
                         </StackPanel>
 
-                        <Button Background="{StaticResource PrimaryColor}" Foreground="White" CornerRadius="8" Padding="16,8" VerticalAlignment="Bottom" Click="ApplyFilter_Click">
+                        <controls:AppButton VerticalAlignment="Bottom" Click="ApplyFilter_Click">
                             <StackPanel Orientation="Horizontal" Spacing="8">
                                 <FontIcon Glyph="&#xE72C;" FontSize="14"/>
                                 <TextBlock Text="Generate Report"/>
                             </StackPanel>
-                        </Button>
+                        </controls:AppButton>
 
-                        <Button Background="#F1F5F9" CornerRadius="8" Padding="16,8" VerticalAlignment="Bottom" Click="ExportReport_Click">
+                        <Button Style="{StaticResource SecondaryButtonStyle}" VerticalAlignment="Bottom" Click="ExportReport_Click">
                             <StackPanel Orientation="Horizontal" Spacing="8">
-                                <FontIcon Glyph="&#xE78C;" FontSize="14" Foreground="#475569"/>
-                                <TextBlock Text="Export" Foreground="#475569"/>
+                                <FontIcon Glyph="&#xE78C;" FontSize="14"/>
+                                <TextBlock Text="Export"/>
                             </StackPanel>
                         </Button>
                     </StackPanel>
